# pathfinder_2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: tiles_map.txt
res/: win32_resources.rc
src/cpp/: main.cpp  main.hpp  pch_cxx.cpp  pch_cxx.hpp
src/cpp/tiles/: Route.hpp  TMap.hpp  Tile.hpp  TilesManager.cpp  TilesManager.hpp  tiles_fwd.hpp
src/cxx/: main.cpp  main.hpp
src/cxx/demo/: CMakeLists.txt  IConsoleOutput.cpp  IConsoleOutput.hpp  IMapFactory.cpp  IMapFactory.hxx  MapDemo.cpp  MapDemo.hpp
src/cxx/pathfinder2d/: CMakeLists.txt
src/cxx/pathfinder2d/cfg/: pathfinder2d.hpp
src/cxx/pathfinder2d/core/: IMap2D.cpp  IMap2D.hxx  IMap2DEventsHandler.hxx  Map2D.cpp  Map2D.hpp
